This reverts commit b915116ab293d931e9965b70dd96b109776ff614.

--- a/android/examples/EuglenaSoccer/app/src/main/res/layout/activity_soccer_game.xml
+++ b/android/examples/EuglenaSoccer/app/src/main/res/layout/activity_soccer_game.xml
@@ -21,8 +21,17 @@
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:orientation="vertical"
-            android:gravity="center">
+            android:gravity="center"
+            android:weightSum="1"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:text="Small Text"
+                android:id="@+id/textView"
+                android:layout_gravity="center_horizontal" />
 
             <ImageView
                 android:id="@+id/zoom_view"
@@ -37,20 +46,31 @@
                 android:gravity="center_horizontal"
                 android:orientation="vertical"
                 android:visibility="gone">
+
                 <TextView
                     android:id="@+id/tutorial_text"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="0dp"
                     android:padding="8dp"
-                    android:gravity="center_horizontal"/>
+                    android:gravity="center_horizontal"
+                    android:layout_weight="1" />
 
                 <Button
                     android:id="@+id/tutorial_button"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="0dp"
                     android:onClick="onTutorialButtonPressed"
-                    android:text="@string/tutorial_button_next"/>
+                    android:text="@string/tutorial_button_next"
+                    android:layout_weight="1" />
+
             </LinearLayout>
+
+            <ZoomControls
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/zoomControls"
+                android:layout_gravity="center_horizontal" />
+
         </LinearLayout>
     </LinearLayout>
 
